k8s/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopspractice-web
  namespace: devopspractice
spec:
  template:
    spec:
      containers:
        - name: devopspractice-web
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
