k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopspractice-ingress
  namespace: devopspractice
spec:
  rules:
    - host: staging.devopspractice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopspractice-web
                port:
                  number: 80
